Long immer als Value-Objekt zu Number-Typen setRecord macht Insert, wenn PK = Default-Value